Creo login, pero no me da tiempo a configurarlo bien

--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,7 @@
             <p>Descargate la app de movil para usuarios y la de escritorio como administrador.</p>
             <div class="download-buttons">
                 <a href="#" class="btn btn-primary btn-large"><i class="fas fa-mobile-alt"></i> Movil</a>
-                <a href="#" class="btn btn-primary btn-large"><i class="fas fa-desktop"></i> Escritorio</a>
+                <a href="/login" class="btn btn-primary btn-large"><i class="fas fa-desktop"></i> Escritorio</a>
             </div>
         </div>
     </section>
